objects/MealPlanMeal__c.object
<CustomObject>
    <description>junction</description>
    <fields>
        <fullName>Meal_Label__c</fullName>
        <label>Meal Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Name__c</fullName>
        <formula>Meal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Number__c</fullName>
        <label>Meal Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meal_Plan__c</fullName>
        <label>Meal Plan</label>
        <referenceTo>Meal_Plan__c</referenceTo>
        <relationshipLabel>MealPlanMeals</relationshipLabel>
        <relationshipName>MealPlanMeals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meal__c</fullName>
        <label>Meal</label>
        <referenceTo>Meal__c</referenceTo>
        <relationshipLabel>MealPlanMeals</relationshipLabel>
        <relationshipName>MealPlanMeals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MealPlanMeal</label>
    <nameField>
        <displayFormat>MPM-{0000000000}</displayFormat>
        <label>MealPlanMeal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MealPlanMeals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>